# ryzen-stresstesting

./: CMakeLists.txt  README.md
scripts/: arch_setup.sh
src/: binary_stack.hpp  main.cpp  perf_counter.cpp  perf_counter.hpp  stress_engine.cpp  stress_engine.hpp  thermal.cpp  thermal.hpp  tui.cpp  tui.hpp
